language_tests/outputs/invalid/range_non_step_bound.out
error: type 'double' does not conform to interface 'Step'
 -> language_tests/source_files/invalid/range_non_step_bound.tr:2:13
	    for _ in 0.0..1.0 {
	             ^^^^^^^^
